--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,7 @@
+header {
+  margin: 25px;
+}
+
 body {
   background-color: tan;
 }
@@ -12,10 +16,16 @@ body {
   margin-right: 25px;
   margin-bottom: 25px;
   background-color: aliceblue;
+  padding: 25px;
 }
 
 img {
   height: 100px;
   width: 150px;
   margin-bottom: -10px;
+}
+
+.tipList {
+  float: right;
+  margin-right: 25px;
 }
