--- a/styles/main.css
+++ b/styles/main.css
@@ -1,31 +1,86 @@
-header {
-  margin: 25px;
-}
-
 body {
-  background-color: tan;
+  background-color: darkcyan;
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
 }
 
-.cardContainer {
+header {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  background-color: lightgoldenrodyellow
+}
+
+header h1 {
+  line-height: 1em;
+  color: darkcyan;
+  text-align: left;
+  padding: 0 2em;
+  font-size: 1.5em;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 1em;
+  overflow: hidden;
+  background-color: rgb(100, 128, 128);
+  display: flex;
+  justify-content: flex-end;
+}
+
+nav li {
+  display: inline;
+  margin: 0 1em;
+}
+
+nav a {
+  color: white;
+}
+
+nav a:hover {
+  color: lightsalmon;
+}
+
+nav a:active {
+  color: lightgreen;
+}
+
+.fishTank {
+  margin: 1em 0;
+  display: flex;
+}
+
+.fishList {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
-.fishCard {
-  margin-left: 25px;
-  margin-right: 25px;
-  margin-bottom: 25px;
-  background-color: aliceblue;
-  padding: 25px;
+.fish-card {
+  background-color: lightcyan;
+  margin: .5em;
+  max-width: 200px;
 }
 
-img {
-  height: 100px;
-  width: 150px;
-  margin-bottom: -10px;
+.fish-card ul {
+  list-style-type: none;
+  padding: .5em;
+  margin: .2em;
+  font-size: .8em;
 }
 
-.tipList {
-  float: right;
-  margin-right: 25px;
+.fish-image {
+  width: 100%;
+  height: auto;
+}
+
+.section-main {
+  margin: 1em;
+}
+
+footer {
+  background-color: darkcyan;
+  color: whitesmoke;
+  text-align: center;
 }
