--- a/styles/main.css
+++ b/styles/main.css
@@ -63,6 +63,7 @@ nav a:active {
   background-color: lightcyan;
   margin: .5em;
   max-width: 200px;
+  padding: 10px;
 }
 
 .fish-card ul {
@@ -74,7 +75,7 @@ nav a:active {
 
 .fish-image {
   width: 100%;
-  height: auto;
+  height: 150px;
 }
 
 .section-main {
