--- a/styles/tips.css
+++ b/styles/tips.css
@@ -5,5 +5,9 @@
   float: right;
   box-shadow: inset 5px 0 5px -5px #29627e;
   font-style: italic;
-  color: #29627e;
+  color: #000000;
+}
+
+aside {
+  float: right;
 }
